manifests/gatekeeper-system/gatekeeper-constraint-templates/images-should-match.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: imagesshouldmatch
spec:
  crd:
    spec:
      names:
        kind: ImagesShouldMatch
        listKind: ImagesShouldMatch
        plural: imagesshouldmatch
        singular: imagesshouldmatch
      validation:
        openAPIV3Schema:
          properties:
            imageMatches:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8simagesshouldmatch

        violation[{"msg": msg, "details": {"wrong_images": wrong_images}}] {
          all_images_from_object := {images | images := input.review.object.spec.template.spec.containers[_].image}
          regex_list:= {regex | regex := input.parameters.imageMatches[_]}
          single_regex := regex_list[_]
          wrong_images := {all_images_from_object[i] | not re_match(single_regex, all_images_from_object[i]) }
          count(wrong_images) > 0
          msg := sprintf("these images are not allowed: %v", [wrong_images])
        }
